--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -36,7 +36,8 @@ jobs:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && dpkg -i ${{ runner.temp }}/hugo.deb
+          && dpkg -x ${{ runner.temp }}/hugo.deb dir \
+          && export PATH=$PATH:$pwd/dir
       - name: Install Dart Sass
         run: snap install dart-sass
       - name: Checkout
