--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -36,8 +36,8 @@ jobs:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && dpkg -x ${{ runner.temp }}/hugo.deb /home/$USER/gh-installations/ \
-          && export PATH=$PATH:$pwd/dir/bin \
+          && dpkg -x ${{ runner.temp }}/hugo.deb hugo \
+          && export PATH=$PATH:$pwd/hugo/usr/local/bin \
           && hugo --version
       - name: Install snap
         run: | 
