--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -38,7 +38,7 @@ jobs:
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && dpkg -x ${{ runner.temp }}/hugo.deb hugo \
           && export PATH=$PATH:$pwd/hugo/usr/local/bin \
-          && hugo --version
+          && echo $PATH && hugo --version
       - name: Install snap
         run: | 
           apt download snapd && ls 
