--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && dpkg -x ${{ runner.temp }}/hugo.deb hugo \
-          && export PATH=$PATH:$pwd/hugo/usr/local/bin \
+          && export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin \
           && echo $PATH && hugo --version
       - name: Install snap
         run: | 
