--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Hugo CLI
         run: |
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && dpkg -x ${{ runner.temp }}/hugo.deb hugo \
+          && dpkg -x ${{ runner.temp }}/hugo.deb ${{ runner.temp }}/hugo \
           && export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin \
           && echo $PATH && hugo --version
       - name: Install snap
