--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -38,10 +38,13 @@ jobs:
           wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
           && dpkg -x ${{ runner.temp }}/hugo.deb ${{ runner.temp }}/hugo \
           && export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin \
-          && echo $PATH && hugo --version
+          && hugo version
       - name: Install snap
         run: | 
-          apt download snapd && ls 
+          apt download snapd \
+          && dpkg -x ${{ runner.temp }}/snapd.deb ${{ runner.temp }}/snap \
+          && export PATH=$PATH:${{ runner.temp }}/snap/usr/local/bin \
+          && snap --version
       - name: Install Dart Sass
         run: snap install dart-sass
       - name: Checkout
