--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -35,41 +35,32 @@ jobs:
     steps:
       - name: Install Hugo CLI
         run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb \
-          && dpkg -x ${{ runner.temp }}/hugo.deb ${{ runner.temp }}/hugo \
-          && export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin \
-          && hugo version
+          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
+          dpkg -x ${{ runner.temp }}/hugo.deb ${{ runner.temp }}/hugo
+          export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin
+          hugo version
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v4
-      - name: Install Node.js dependencies
-        run: "[[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true"
-      - name: Build with Hugo
-        env:
-          # For maximum backward compatibility with Hugo modules
-          HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
+      - name: Build Page with Hugo
         run: |
-          hugo \
-            --minify \
-            --baseURL "${{ steps.pages.outputs.base_url }}/"
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
-        with:
-          path: ./public
+          cd ${{ runner.temp }}/docs
+          hugo
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: self-hosted
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+      - name: Commit Changes
+        uses: stefanzweifel/git-auto-commit-action@v5
+        with:
+          commit_message: "Automated Upload after push to main"
+          branch: html
+          file_pattern: ${{ runner.temp }}/docs/public/**/*
+          repository: .
+          commit_user_name: GitHub Actions HTML Bot
+          commit_author: Botty <actions@github.com>
+          create_branch: true
+          disable_globbing: false
+          skip_checkout: true
+          skip_fetch: true
+
+
+  
