--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -33,34 +33,13 @@ jobs:
     env:
       HUGO_VERSION: 0.120.4
     steps:
-      - name: Install Hugo CLI
-        run: |
-          wget -O ${{ runner.temp }}/hugo.deb https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.deb
-          dpkg -x ${{ runner.temp }}/hugo.deb ${{ runner.temp }}/hugo
-          export PATH=$PATH:${{ runner.temp }}/hugo/usr/local/bin
-          hugo version
       - name: Checkout
         uses: actions/checkout@v4
         with:
           submodules: recursive
-      - name: Build Page with Hugo
+      - name: Deploy Hugo
         run: |
-          cd ${{ runner.temp }}/docs
-          hugo
-
-      - name: Commit Changes
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Automated Upload after push to main"
-          branch: html
-          file_pattern: ${{ runner.temp }}/docs/public/**/*
-          repository: .
-          commit_user_name: GitHub Actions HTML Bot
-          commit_author: Botty <actions@github.com>
-          create_branch: true
-          disable_globbing: false
-          skip_checkout: true
-          skip_fetch: true
-
-
-  
+          nix-shell --command "hugo version \
+            && cd src/hugo-pages/ \
+            && hugo \
+            && cd public"
