--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -11,7 +11,7 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  contents: read
+  contents: write
   pages: write
   id-token: write
 
@@ -66,4 +66,3 @@ jobs:
 
           git commit -am "Deployment of current website"
           git push
-
