--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -39,6 +39,7 @@ jobs:
           submodules: recursive
       - name: Deploy Hugo
         run: |
+          cd {{ github.workspace }}
           nix --version
 
           # First build the LaTeX file
