--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -67,6 +67,7 @@ jobs:
           mkdir _temp
           cp -r ../../.git _temp
           cd _temp
+          chmod 755 * # Required so that files can be deleted in the end.
 
           git config user.email "botty@botnet.com"
           git config user.name "Botty the Bot"
