--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -1,13 +1,7 @@
 # Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy Hugo site to Pages
 
-on:
-  # Runs on pushes targeting the default branch
-  push:
-    branches: ["ci/NixFlakes"]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+on: push
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -28,7 +22,7 @@ defaults:
 
 jobs:
   # Build job
-  build:
+  Build Hugo and LaTeX:
     runs-on: self-hosted
     env:
       HUGO_VERSION: 0.120.4
@@ -43,7 +37,7 @@ jobs:
       - name: Build LaTeX Document
         run:
           cd ${{ github.workspace }}
-          
+
           nix-build # Creates main.pdf in result folder
 
       - name: Build Website with Hugo
