[CI] Moved netlify.toml to static folder

--- a/src/hugo-pages/static/netlify.toml
+++ b/src/hugo-pages/static/netlify.toml
@@ -3,15 +3,11 @@
   to = "/404"
   status = 404
   force = true
-  conditions = {
-    Role = ["user"]
-  }
+  conditions = { Role = ["user"] }
 
 [[redirects]]
   from = "/sensitive"
   to = "/404"
   status = 404
   force = true
-  conditions = {
-    Role = ["user"]
-  }
+  conditions = { Role = ["user"] }
