--- a/src/hugo-pages/static/netlify.toml
+++ b/src/hugo-pages/static/netlify.toml
@@ -3,7 +3,7 @@
   to = "/404"
   status = 404
   force = true
-  conditions = { Role = ["user"] }
+  conditions = { Role != ["user"] }
 
 [[redirects]]
   from = "/sensitive"
