--- a/src/hugo-pages/hugo.toml
+++ b/src/hugo-pages/hugo.toml
@@ -1,9 +1,12 @@
-languageCode = 'en-us'
 title = 'Starlink Thesis'
 theme = "hugo-book"
 
+# Needed for mermaid/katex shortcodes
+[markup]
+[markup.goldmark.renderer]
+  unsafe = true
+
 [module]
 [[module.mounts]]
-  source = "../../docs"
-  target = "content"
-
+  source = '../hugo-docs'
+  target = 'content'
