--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -24,9 +24,12 @@ jobs:
   # Build job
   Build:
     runs-on: self-hosted
-    env:
-      HUGO_VERSION: 0.120.4
     steps:
+      - name: Remove Leftovers
+        run: |
+          cd ${{ github.workspace }}
+          chmod -R 777 .
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -64,20 +67,19 @@ jobs:
           # Push results to branch "static-html"
           mkdir _temp
           cp -r ./.git _temp
-          cd _temp
 
-          git config user.email "botty@botnet.com"
-          git config user.name "Botty the Bot"
-          git fetch --all
-          git switch static-html
-          rm -rf *
-
-          cp -r ../result/* .
-          cp ../main.pdf _temp
-
-          git add .
-          git diff-index --quiet HEAD || git commit -m "Deployment of current website"
-          git push
+          git -C _temp config user.email "botty@botnet.com"
+          git -C _temp config user.name "Botty the Bot"
+          git -C fetch --all
+          git -C switch static-html
+          
+          rm -rf _temp/*
+          cp -r ./result/* _temp && chmod -R 777 _temp
+          cp ./main.pdf _temp
+          
+          git -C _temp add .
+          git -C _temp diff-index --quiet HEAD || git commit -m "Deployment of current website"
+          git -C _temp push
           
           cd .. && chmod -R 777 _temp
 
