[CI] Remove leftover errors

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -74,7 +74,7 @@ jobs:
           git switch static-html
 
           rm -rf *
-          cp -r ../result/* _temp
+          cp -r ../result/* .
 
           git add .
           git diff-index --quiet HEAD || git commit -m "Deployment of current website"
