--- a/src/satellite-constellations/package.json
+++ b/src/satellite-constellations/package.json
@@ -1,27 +1,19 @@
 {
   "name": "satellite-constellations",
-  "version": "0.1.0",
-  "private": true,
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/main.ts",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "compile": "tsc",
+    "build": "npm run compile && node built/main.js"
   },
+  "author": "Robert Richter",
+  "license": "ISC",
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4"
+    "typescript": "^5.4.4",
+    "undici-types": "^6.12.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "@types/node": "^20.12.6"
   }
 }
