Added Nvm to git installation

--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -28,6 +28,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
+          ref: ${{ github.ref }}
           submodules: recursive
       - name: Get Latest Commit Hash Of Nixpkgs
         run: |
