--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Run Update Script
         run: |
           cd ${{ github.workspace }}
-          ./nixpkgs/update.sh | $LATEST_HASH
+          ./nixpkgs/update.sh | echo $LATEST_HASH
 
       - name: Commit Result
         run: |
