--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -41,7 +41,7 @@ jobs:
           cd ${{ github.workspace }}
           echo "Latest Hash found: $LATEST_HASH"
           sed -e "s/fetchCommit\s\".*\"/fetchCommit\s \"$LATEST_HASH\"/g" ./nixpkgs/default.nix > ./nixpkgs/default.nix
-          cat nixpkgs/
+          cat nixpkgs/default.nix
           ./nixpkgs/update.sh
 
       - name: Commit Result
