--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -34,8 +34,8 @@ jobs:
           cd ${{ github.workspace }}
           echo "Latest Hash found: $LATEST_HASH"
           sed -e "s/fetchCommit\s\".*\"/fetchCommit\s \"$LATEST_HASH\"/g" ./nixpkgs/default.nix
-          cat nixpkgs/default.nix
-          #./nixpkgs/update.sh | cat ./nixpkgs/default.nix
+
+          cat nixpkgs/hashes.nix | ./nixpkgs/update.sh
 
       - name: Commit Result
         if: github.ref == 'refs/heads/main'
