--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -34,7 +34,7 @@ jobs:
           cd ${{ github.workspace }}
           echo "Latest Hash found: $LATEST_HASH"
           
-          export SED_COMMAND="'s/fetchCommit \".*\"/fetchCommit \"${LATEST_HASH}\"/g'"
+          export SED_COMMAND="s/fetchCommit \".*\"/fetchCommit \"${LATEST_HASH}\"/g"
           sed -i $SED_COMMAND ./nixpkgs/default.nix
           cat ./nixpkgs/default.nix
 
