--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -35,6 +35,7 @@ jobs:
           echo "Latest Hash found: $LATEST_HASH"
           
           export SED_COMMAND='s/fetchCommit.*{/fetchCommit "$LATEST_HASH"){/g'
+          echo $SED_COMMAND
           cat ./nixpkgs/default.nix | sed -e $SED_COMMAND > ./nixpkgs/default.nix 
           cat ./nixpkgs/default.nix
 
