--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -33,8 +33,8 @@ jobs:
 
           cd ${{ github.workspace }}
           echo "Latest Hash found: $LATEST_HASH"
-          
-          export SED_COMMAND='s/fetchCommit.*{/fetchCommit "$LATEST_HASH"){/g'
+
+          export SED_COMMAND='s/fetchCommit.*{/fetchCommit "${LATEST_HASH}"){/g'
           echo $SED_COMMAND
           cat ./nixpkgs/default.nix | sed -e '$SED_COMMAND' > ./nixpkgs/default.nix 
           cat ./nixpkgs/default.nix
