--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -25,21 +25,17 @@ jobs:
           submodules: recursive
       - name: Get Latest Commit Hash Of Nixpkgs
         run: |
+          cd nixpkgs
+
           git clone --quiet --depth 1 https://github.com/NixOS/nixpkgs.git nixpkgs-test
           cd nixpkgs-test
           export LATEST_HASH=$(git rev-parse HEAD)
-
           cd .. && rm -rf nixpkgs-test
 
-          cd ${{ github.workspace }}
           echo "Latest Hash found: $LATEST_HASH"
 
-          export SED_COMMAND='s/fetchCommit.*{/fetchCommit "${LATEST_HASH}"){/g'
-          echo $SED_COMMAND
-          cat ./nixpkgs/default.nix | sed -e '$SED_COMMAND' > ./nixpkgs/default.nix 
-          cat ./nixpkgs/default.nix
-
-          bash ./nixpkgs/update.sh
+          nix-shell -p python3 --command "python3 update-default-nix.py $LATEST_HASH"
+          bash ./update.sh
 
       - name: Commit Result
         if: github.ref == 'refs/heads/main'
@@ -47,6 +43,6 @@ jobs:
           git config user.email "botty@botnet.com"
           git config user.name "Botty the Bot"
 
-          git add nixpkgs
+          git add .
           git commit -m "[Infrastructure] Regular Update for Nixpkgs"
           git push
