--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -1,7 +1,10 @@
 # Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Update Nix
 
-on: push
+on:
+  workflow_dispatch:
+  schedule:
+  - cron: 30 6 * * 1
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
