--- a/.github/workflows/update-nix.yml
+++ b/.github/workflows/update-nix.yml
@@ -4,7 +4,7 @@ name: Update Nix
 on:
   workflow_dispatch:
   schedule:
-  - cron: 30 6 * * 1
+  - cron: "30 6 * * 1"
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
