[CI] Add Proposal to Website Output (#43)
This adds the proposal to the website output. Also adds the according
links to the output.

--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           cd ${{ github.workspace }}
           chmod -R 777 .
-      
+
       - name: Checkout
         uses: actions/checkout@v4
         with:
@@ -42,7 +42,9 @@ jobs:
       - name: Build Proposal Document
         run: |
           cd ${{ github.workspace }}
+
           nix-build proposal.nix
+          cp result/main.pdf proposal.pdf
 
       # Builds main.pdf and saves it in workspace root
       - name: Build LaTeX Document
@@ -57,12 +59,16 @@ jobs:
         run: |
           cd ${{ github.workspace }}
 
-          # Put most recent main.pdf in static folder
+          # Put most recent main.pdf and proposal.pdf in static folder
           rm -f src/hugo-pages/static/main.pdf
           rm -f src/hugo-pages/static/restricted/main.pdf
+          rm -f src/hugo-pages/static/proposal.pdf
+          rm -f src/hugo-pages/static/restricted/proposal.pdf
+
           mkdir -p src/hugo-pages/static/restricted
           mv ./main.pdf src/hugo-pages/static/restricted
-          
+          mv ./proposal.pdf src/hugo-pages/static/restricted
+
           nix-build hugo.nix # Basically a `hugo` command
 
       - name: Deploy to branch
