--- a/src/satellite-constellations/package.json
+++ b/src/satellite-constellations/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.4.5",
+    "read-last-lines": "^1.8.0",
     "typescript": "^5.4.4",
     "undici-types": "^6.12.0"
   },
