--- a/src/harvester/docker-compose.yml
+++ b/src/harvester/docker-compose.yml
@@ -16,9 +16,14 @@ services:
     image: bitnami/kafka:3.7.0
     ports:
       - 9092:9092
+    expose:
+      - 29092
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CFG_ADVERTISED_HOST_NAME: kafka
+      KAFKA_CFG_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_CFG_NUM_PARTITION: 1
+      KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: "true"
+
     depends_on: 
       - zookeeper
   kafka-ui:
@@ -35,3 +40,12 @@ services:
     depends_on: 
       - kafka
       - zookeeper
+  ripe-harvester:
+    container_name: ripe-harvester
+    hostname: ripe-harvester
+    build: ./producers/ripe-prod
+    depends_on: 
+      - kafka
+      - zookeeper
+    environment:
+      KAFKAJS_NO_PARTITIONER_WARNING: "1"
