--- a/src/harvester/producers/ripe-prod/package.json
+++ b/src/harvester/producers/ripe-prod/package.json
@@ -9,8 +9,10 @@
   },
   "author": "Robert Richter",
   "dependencies": {
+    "@codetailor/split-json": "^1.0.3",
     "@types/node": "^20.12.7",
     "kafkajs": "^2.2.4",
+    "stream-json": "^1.8.0",
     "typescript": "^5.4.5"
   }
 }
