--- a/src/harvester/producers/ripe-prod/package.json
+++ b/src/harvester/producers/ripe-prod/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@codetailor/split-json": "^1.0.3",
     "@types/node": "^20.12.7",
+    "@types/ws": "^8.5.10",
     "kafkajs": "^2.2.4",
     "stream-json": "^1.8.0",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "ws": "^8.17.0"
+  },
+  "optionalDependencies": {
+    "all": "^0.0.0",
+    "bufferutil": "^4.0.8"
   }
 }
