--- a/src/harvester/docker-compose.yml
+++ b/src/harvester/docker-compose.yml
@@ -49,3 +49,9 @@ services:
       - zookeeper
     environment:
       KAFKAJS_NO_PARTITIONER_WARNING: "1"
+  duckdb:
+    container_name: duckdb
+    hostname: duckdb
+    build: ./storage-engine
+    ports:
+      - 3000:3000
