--- a/src/harvester/producers/ripe-prod/Dockerfile
+++ b/src/harvester/producers/ripe-prod/Dockerfile
@@ -1,8 +1,8 @@
-FROM node:20-bullseye
+FROM node:22-bookworm-slim
 
 COPY . /app
 WORKDIR /app
 
 RUN cd /app && npm install
 
-CMD ["npm", "run", "harvester"]
+CMD ["npm", "run", "start"]
