--- a/src/harvester/docker-compose.yml
+++ b/src/harvester/docker-compose.yml
@@ -1,11 +1,6 @@
 version: "3.9"
 
 services:
-  ripe-harvester:
-    container_name: ripe-harvester
-    hostname: ripe-harvester
-    build: ./producers/ripe-prod
-
   postgres:
     container_name: postgres
     hostname: postgres
@@ -25,3 +20,12 @@ services:
     restart: always
     ports:
       - 8080:8080
+
+  jupyter:
+    container_name: jupyter
+    hostname: jupyter
+    image: jupyter/datascience-notebook
+    ports:
+      - 8888:8888
+    volumes:
+      - ./notebooks:/home/jovyan/work
