--- a/src/harvester/producers/cloudflare-radar/package.json
+++ b/src/harvester/producers/cloudflare-radar/package.json
@@ -12,10 +12,14 @@
     "@types/node": "^20.12.7",
     "dotenv": "^16.4.5",
     "kafkajs": "^2.2.4",
+    "pg": "^8.12.0",
     "typescript": "^5.4.5"
   },
   "optionalDependencies": {
     "all": "^0.0.0",
     "bufferutil": "^4.0.8"
+  },
+  "devDependencies": {
+    "@types/pg": "^8.11.6"
   }
 }
