--- a/src/harvester/docker-compose.yml
+++ b/src/harvester/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: postgres
     hostname: postgres
     image: postgres:16
-    shm_size: 512mb
+    shm_size: 2G
     ports:
       - 5432:5432
     volumes:
