--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -20,26 +20,23 @@ defaults:
   run:
     shell: bash
 
-jobs:
-  # Build job
-  checkout:
-    runs-on: ubuntu-latest
-    steps:
-       - name: Checkout
-         uses: actions/checkout@v4
-         with:
-           ref: ${{ github.ref }}
-           submodules: recursive
+env:
+  CLONE_COMMAND: git clone --depth 1 -b $GITHUB_REF_NAME --single-branch --recursive ${{ github.server_url }}/${{ github.repository }}.git /app/starlink-thesis
 
+jobs:
   build:
     runs-on: ubuntu-latest
     needs: checkout
     container:
       image: nixos/nix:latest
     steps:
+      - name: Clone repository
+        run: |
+          mkdir /app/starlink-thesis
+          nix-shell -p git --run "$CLONE_COMMAND"
+          cd /app/starlink-thesis
       - name: Test Nix Installation
         run: nix --version
-
       - name: Build Proposal Document
         run: |
           cd ${{ github.workspace }}
