--- a/.github/workflows/tex.yml
+++ b/.github/workflows/tex.yml
@@ -1,7 +1,15 @@
 # Sample workflow for building and deploying a Hugo site to GitHub Pages
 name: Deploy Artifacts
 
-on: push
+on:
+  push:
+    paths:
+      - proposal.nix
+      - tex.nix
+      - .github/workflows/tex.nix
+      - proposal/**
+      - thesis/**
+
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
@@ -21,7 +29,7 @@ defaults:
     shell: bash
 
 jobs:
-  build:
+  build-documents:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repository
