--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "starlink-thesis",
   "scripts": {
-    "format-check": "eslint src"
+    "check-format": "eslint src",
+    "format": "eslint src --fix"
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
