--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -18,4 +18,4 @@ jobs:
       - name: Run Formatter
         run: |
           npm install --force
-          npm run format-check
+          npm run check-format
